# just-start

./: .coveragerc  .gitignore  .travis.yml  Pipfile  README  README.md  README.rst  example_config.toml  just-start  just-start.py  mypy.ini  pomodoro.py  pyproject.toml  setup.py  tox.ini
.github/: config.yml
core/: just_start.py
gui_clients/: curses.py
just_start/: __init__.py  _just_start.py  _log.py  client.py  client_decorators.py  client_example.py  client_handler.py  config_reader.py  constants.py  just_start.py  log.py  logging.py  os.py  os_utils.py  pomodoro.py  preferences.schema.json  singleton.py  utils.py
just_start/clients/: curses.py
just_start/core/: __init__.py  _base_routine.py
just_start/pomodoro/: __init__.py  _pomodoro.py  constants.py  pomodoro.py
just_start_core/: constants.py  just_start.py  pomodoro.py
just_start_curses/: client.py
just_start_terminal/: __init__.py
just_start_urwid/: __init__.py  __main__.py  client.py
src/clients/: curses.py
tests/: conftest.py  test_client.py  test_client_example.py  test_config_reader.py  test_os_utils.py  test_pomodoro.py  test_singleton.py
tests/just_start/: test_os_utils.py
tests/just_start_urwid/: test_urwid_client.py
tests/test_just_start/: test_client.py  test_client_example.py  test_config_reader.py  test_just_start.py  test_os_utils.py  test_pomodoro.py
tests/test_just_start_urwid/: test_urwid_client.py
tests/unit_tests/test_just_start/: test_pomodoro.py
