[tool.poetry]
name = "just-start"
version = "0.5.1"
description = "Just Start is a wrapper for Task Warrior with pomodoro support"
license = "GPL-3.0+"

authors = ["Ali Ghahraei <aligf94@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/AliGhahraei/just-start/"
include = ['py.typed']

packages = [
    { include = "just_start" },
    { include = "just_start_urwid" },
]

[tool.poetry.dependencies]
python = "^3.6"
pexpect = "^4.6"
toml = "^0.10.0"
pydantic = "^0.31"
urwid = {version = "^2.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-mock = "^1.10"
coverage = "^4.5"
mypy = "^0.720.0"
pygments = "^2.4"
codecov = "^2.0"
flake8 = "^3.7"

[tool.poetry.extras]
urwid = ["urwid"]
# Just to be "installable" like the other clients
term = []

[tool.poetry.scripts]
just-start-term = "just_start.client_example:main[term]"
just-start-urwid = "just_start_urwid:main[urwid]"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
